data/derived/comb/progs/unify/prog8482.ml.out
Characters 434-491:
  | 5 -> buildOp2(build(rand,d),build(rand,d),build(rand,d),build(rand,d))
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type expr * expr * expr
